# learn-opengl

./: CMakeLists.txt  Makefile
src/: hello_triangle.c
